--- a/index.html
+++ b/index.html
@@ -20,22 +20,14 @@
             <div class="header-top">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <div class="left">
-                            <ul class="flexitem main-links">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </div>
                         <div class="right">
                             <ul class="flexitem">
                                 <li class="main-links">
-                                    <li><a href="#"></a></li>
-                                    <li><a href="#"></a></li>
-                                    <li><a href="#"></a></li>
-                                    <li><a href="#" >?<span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
+                                    <li><a href="#"> Cadastre </a></li>
+                                    <li><a href="#"> Login </a></li>
+                                    <li><a href="#" >Real<span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
                                     </li>
-                                    <li><a href="#">?<span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a></li>
+                                    <li><a href="#">Portugês - Brasil<span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a></li>
                                 </li>
                             </ul>
                         </div>
@@ -44,11 +36,10 @@
             </div>
         </header>
 <!--=======================================================================================================================================================================================                                                                         PARTE PRINCIPAL DO SITE ===========================================================================================================================================================================================-->
-    <div id="page" class="site">
+
         <main>
         </main>
 <!--=======================================================================================================================================================================================                                                                         RODAPE DO SITE, INFORMAÇÕES DOS PARTICIPANTES E LOCALIZAÇÃO ===========================================================================================================================================================================================-->
-    <div id="page" class="site">
         <footer>
         </footer>
     </div>
