--- a/Albatroz/index.html
+++ b/Albatroz/index.html
@@ -220,7 +220,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/slider/minecraft.jpg" alt="">
+                                            <img src="./fotos/slider/minecraft.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -233,7 +233,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/produtos/hog4.webp" alt="">
+                                            <img src="./fotos/slider/hog4.webp" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -246,7 +246,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/produtos/gothan.webp" alt="">
+                                            <img src="./fotos/slider/gothan.webp" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -259,7 +259,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/produtos/marvel4.jpg" alt="">
+                                            <img src="./fotos/slider/marvel4.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -271,7 +271,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/produtos/resident2.webp" alt="">
+                                            <img src="./fotos/slider/resident2.webp" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -283,7 +283,7 @@
                                 <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
-                                            <img src="fotos/produtos/diabloiv.jpg" alt="">
+                                            <img src="./fotos/slider/diabloiv.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
                                             <h4>Lançamento</h4>
@@ -304,32 +304,32 @@
                     <div class="wrapper flexitem">
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/warner.png" alt="">
+                                <img src="./fotos/marcas/bli.png" alt="">
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/valve.jpg" alt="">
+                                <img src="./fotos/marcas/eas.png" alt="">
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/bli.png" alt="">
+                                <img src="./fotos/marcas/rockstar.jpg" alt="">
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/steam.jpg" alt="">
+                                <img src="./fotos/marcas/steam.jpg" alt="">
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/eas.png" alt="">
+                                <img src="./fotos/marcas/valve.jpg" alt="">
                             </a>
                         </div>
                         <div class="item">
                             <a href="#">
-                                <img src="fotos/marcas/rockstar.jpg" alt="">
+                                <img src="./fotos/marcas/warner.jpg" alt="">
                             </a>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
     
             <div class="products">
                 <div class="row">
-                    <img src="fotos/produtos/homemaranha2.jpeg" alt="">
+                    <img src="./fotos/produtos/homemaranha2.jpeg" alt="">
                     <div class="product-text">
                         <h5>Em Alta</h5>
                     </div>
