--- a/Albatroz/login.html
+++ b/Albatroz/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login IA Fix</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../Albatroz/css/login.css">
     <script src="../Albatroz/js/login.js" defer></script>
 </head>
@@ -212,6 +212,8 @@
                         <input type="password" id="senha" placeholder="Senha" required>
                         <label id="senhaLabel" for="senha"></label> 
                     <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
+                    <p class="senha">Esqueceu a senha?
+                        <a href="recuperar_dados.html" target="_blank">Clique aqui</a>
                     </div>
                 </div>  
                 <div class="justify-center">
