--- a/Albatroz/recuperar_dados.html
+++ b/Albatroz/recuperar_dados.html
@@ -9,30 +9,203 @@
 </head>
 <body>
 
-	<div class="container">
-		<div class="container-login">
-			<div class="wrap-login">
-				<form class="login-form">
-					<span class="login-form-title">
-						Dados para recuperaçao
-					</span>
+	<section>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span class="let">A</span>
+		<span class="let">L</span>
+		<span class="let">B</span>
+		<span class="let">A</span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span class="let">T</span>
+		<span class="let">R</span>
+		<span class="let">O</span>
+		<span class="let">Z</span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
 
-					<div class="wrap-input margin-top-35 margin-bottom-35">
-						<input class="input-form" type="text" name="email" autocomplete="off">
-						<span class="focus-input-form" data-placeholder="E-mail"></span>
-					</div>
-
-					<div class="container-login-form-btn">
-						<button class="login-form-btn">
-							Enviar
-						</button>
-					</div>
-				</form>
-			</div>
-			<img src="images/login.png" width="300" height="300" class="margin-left-50" />
-		</div>
-	</div>
-	
+		<div id="main-container">
+			<form id="register-form" action="">
+			  <h1>Recuperar sua senha</h1>
+			  <div class="full-box">
+				<label for="email">E-mail</label>
+				<input type="email" name="email" id="email" placeholder="Digite seu e-mail" data-min-length="2" data-email-validate>
+			  </div>
+			  <div class="half-box">
+				  <label for="lastname">Confirmar E-mail</label>
+				  <input type="text" name="lastname" id="lastname" placeholder="Confirme seu e-mail" data-required data-only-letters>
+			  </div>
+			  <div class="full-box">
+				<input id="btn-submit" type="submit" value="Enviar">
+			  </div>
+			</form>
 	<script>
 		let inputs = document.getElementsByClassName('input-form');
 		for (let input of inputs) {
@@ -45,6 +218,6 @@
 			});
 		}
 	</script>
-
+</section>
 </body>
 </html>
