--- a/Albatroz/index.html
+++ b/Albatroz/index.html
@@ -359,7 +359,7 @@
     
             <div class="products">
                 <div class="row">
-                    <img src="./fotos/produtos/homemaranha2.jpeg" alt="">
+                    <img src="./fotos/produtos/homemaranha2.jpg" alt="">
                     <div class="product-text">
                         <h5>Em Alta</h5>
                     </div>
