--- a/pagina jogo/batmanorigins.html
+++ b/pagina jogo/batmanorigins.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/batmanorigins.jpg" alt="">
                 <p class="nome-preco">Batman™: Arkham Origins</p>
-                <p class="preco">R$89,99</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$89,99</p></a>
                 
             </div>
             <div class="descricao-jogo">
