--- a/pagina jogo/diablo 4.html
+++ b/pagina jogo/diablo 4.html
@@ -36,12 +36,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/diablo 4 capa.avif" alt="">
                 <p class="nome-preco">Diablo IV</p>
-                <p class="preco">R$349,90</p>
+                <a href="/Albatroz/pagamento.html"></a><p class="preco">R$349,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/diablo 4 dlc.avif" alt="">
                 <p class="nome-preco2">Diablo IV Edição Ultimate</p>
-                <p class="preco2">R$499,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$499,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
