--- a/pagina jogo/fnafHW.html
+++ b/pagina jogo/fnafHW.html
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnafHW capa.jpg" alt="">
                 <p class="nome-preco">FIVE NIGHTS AT FREDDY'S: HELP WANTED</p>
-                <p class="preco">R$57,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$57,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/fnafHWBUNDLE.jpg" alt="">
                 <p class="nome-preco2">Five Nights at Freddy's: Help Wanted - Bundle</p>
-                <p class="preco2">R$80,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$80,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
