--- a/pagina jogo/sexta13.html
+++ b/pagina jogo/sexta13.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/jason capa.jpg" alt="">
                 <p class="nome-preco">Friday the 13th: The Game</p>
-                <p class="preco">R$28,99</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$28,99</p></a>
                 
             </div>
             <div class="descricao-jogo">
