--- a/pagina jogo/uno.html
+++ b/pagina jogo/uno.html
@@ -34,12 +34,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/uno.jpg" alt="">
                 <p class="nome-preco">UNO</p>
-                <p class="preco">R$29,90</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$29,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/uno.jpg" alt="">
                 <p class="nome-preco2">UNO - Ultimate Edtion</p>
-                <p class="preco2">R$79,99</p>
+                <a href="/Albatroz/pagamento.html"></a><p class="preco2">R$79,99</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
