--- a/pagina jogo/village.html
+++ b/pagina jogo/village.html
@@ -35,12 +35,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/village capa.png" alt="">
                 <p class="nome-preco">Resident Evil Village</p>
-                <p class="preco">R$139,90</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$139,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/Village-Gold-Edition-1.jpg" alt="">
                 <p class="nome-preco2">Resident Evil Village Gold Edition</p>
-                <p class="preco2">R$169,90</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$169,90</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
