--- a/pagina jogo/wo long.html
+++ b/pagina jogo/wo long.html
@@ -34,12 +34,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/wo long capa2.jpg" alt="">
                 <p class="nome-preco">Wo Long: Fallen Dynasty</p>
-                <p class="preco">R$299,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$299,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/wo long dlc.jpeg" alt="">
                 <p class="nome-preco2">Wo Long: Fallen Dynasty Digital Deluxe Edition</p>
-                <p class="preco2">R$424,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$424,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
