--- a/pagina jogo/zelda.html
+++ b/pagina jogo/zelda.html
@@ -33,7 +33,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/zelda2.jpg" alt="">
                 <p class="nome-preco">The Legend of Zelda™: Tears of the Kingdom</p>
-                <p class="preco">R$357,99</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$357,99</p></a>
                
             </div>
             <div class="descricao-jogo">
