--- a/pagina jogo/crash4.html
+++ b/pagina jogo/crash4.html
@@ -34,7 +34,7 @@
                 <img class="img-game" src="fotos/produtos/crash4 capa.jpg" alt="">
                 <p class="nome-preco">Crash Bandicoot™ 4: It’s About Time
                 </p>
-                <p class="preco">R$89,95</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$89,95</p></a>
               
             </div>
             <div class="descricao-jogo">
