--- a/pagina jogo/minelegends.html
+++ b/pagina jogo/minelegends.html
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/mine capa.jpg" alt="">
                 <p class="nome-preco">Minecraft Legends</p>
-                <p class="preco">R$199,90</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$199,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/mine deluxe.avif" alt="">
                 <p class="nome-preco2">Minecraft Legends Deluxe Edition</p>
-                <p class="preco2">R$249,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$249,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
