--- a/pagina jogo/re4.html
+++ b/pagina jogo/re4.html
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/re4 capa.jpg" alt="">
                 <p class="nome-preco">Resident Evil 4</p>
-                <p class="preco">R$249,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco">R$249,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/re4 deluxe.png" alt="">
                 <p class="nome-preco2">Resident Evil 4 Deluxe Edition</p>
-                <p class="preco2">R$300,00</p>
+                <a href="/Albatroz/pagamento.html"><p class="preco2">R$300,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
