--- a/categoria jogo/ação.html
+++ b/categoria jogo/ação.html
@@ -223,21 +223,21 @@
                         <div style="clear: both;"></div>
                     </a>
 
-                    <!-- ação 14 
+                    <!-- ação 14 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/" alt="">
+                            <img src="fotos/produtos/mine capa.jpg" alt="Capa minelegends">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$</div>
+                                <div class="block-preco-final"> R$199,90</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> </div>
+                            <div class="tab-item-name"> Minecraft Legends</div>
                         </div>
                         <div style="clear: both;"></div>
-                    </a>-->
+                    </a>
 
                 </div>
             </div>
