link das categorias

--- a/Albatroz/index.html
+++ b/Albatroz/index.html
@@ -103,15 +103,13 @@
                                                 <div class="icon-small"><i class="ri-arrow-right-s-line"></i></div>
                                             </a>
                                             <ul>
-                                                <li><a href="#">Ação</a></li>
-                                                <li><a href="#">Arcade </a></li>
-                                                <li><a href="#">Aventura</a></li>
-                                                <li><a href="#">Cartas</a></li>
-                                                <li><a href="#">Casual</a></li>
-                                                <li><a href="#">Esportes</a></li>
-                                                <li><a href="#">Estratégia</a></li>
-                                                <li><a href="#">RPG</a></li>
-                                                <li><a href="#">Terror</a></li>
+                                                <li><a href="/categoria jogo/ação.html">Ação</a></li>
+                                                <li><a href="/categoria jogo/arcade.html">Arcade </a></li>
+                                                <li><a href="/categoria jogo/aventura.html">Aventura</a></li>
+                                                <li><a href="/categoria jogo/casual.html">Casual</a></li>
+                                                <li><a href="/categoria jogo/estrategia.html">Estratégia</a></li>
+                                                <li><a href="/categoria jogo/rpg.html">RPG</a></li>
+                                                <li><a href="/categoria jogo/terror.html">Terror</a></li>
                                             </ul>
                                         </li>
                                         <li class="has-child electric">
