--- a/pagina jogo/fnafHW.html
+++ b/pagina jogo/fnafHW.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnafHW capa.jpg" alt="">
                 <p class="nome-preco">FIVE NIGHTS AT FREDDY'S: HELP WANTED</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$57,00</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$57,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/fnafHWBUNDLE.jpg" alt="">
