--- a/pagina jogo/MK11.html
+++ b/pagina jogo/MK11.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/mk11.jpg" alt="">
                 <p class="nome-preco">Mortal Kombat 11</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$229,99</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$229,99</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/banner/MK11Ultimate616x181.jpg" alt="">
