--- a/pagina jogo/diablo 4.html
+++ b/pagina jogo/diablo 4.html
@@ -36,7 +36,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/diablo 4 capa.avif" alt="">
                 <p class="nome-preco">Diablo IV</p>
-                <a href="/Albatroz/pagamento.html"></a><p class="preco">R$349,90</p></a>
+                <a href="/Albatroz/pagamento.html"></a><p class='preco1'>Carrinho</p> <p class="preco">R$349,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/diablo 4 dlc.avif" alt="">
