--- a/pagina jogo/fifa.html
+++ b/pagina jogo/fifa.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fifa capa.jpeg" alt="">
                 <p class="nome-preco">Ea Sports - FIFA 23</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$240,00</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$240,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/fifa 23 ultimate edition.png" alt="">
