--- a/pagina jogo/fnafSB.html
+++ b/pagina jogo/fnafSB.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnafSB capa.jpg" alt="">
                 <p class="nome-preco">Five Nights at Freddy's: Security Breach</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$70,00</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$70,00</p></a>
                 
             </div>
             <div class="descricao-jogo">
