--- a/pagina jogo/re4.html
+++ b/pagina jogo/re4.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/re4 capa.jpg" alt="">
                 <p class="nome-preco">Resident Evil 4</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$249,00</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$249,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/re4 deluxe.png" alt="">
