atualização pagina jogo

--- a/pagina jogo/CSGO.html
+++ b/pagina jogo/CSGO.html
@@ -32,13 +32,13 @@
             <div class="imgs-compra">
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/csgo.jpg" alt="">
-                <p class="nome-preco">Valve - Counter-Strike: Global Offensive (CS:GO) </p>
-                <p class="preco">Gratuito</p>
+                <p class="nome-preco">Valve - Counter-Strike: Global Offensive (CS:GO) </p><p class='preco1'>Gratuito</p>
+                <p class="preco">Carrinho</p>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/valve complete pack.jpg" alt="">
                 <p class="nome-preco2">Valve - Complete pack</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco2">R$188,00</p></a>
+                <a href="/Albatroz/pagamento.html"> <p class="preco2">R$188,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
