--- a/pagina jogo/wow.html
+++ b/pagina jogo/wow.html
@@ -33,7 +33,7 @@
             <div class="imgs-compra">
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/wow capa3.jpg" alt="">
-                <p class="nome-preco">world of warcraft</p>
+                <p class="nome-preco">world of warcraft</p> <p class='preco1'>Carrinho</p>
                 <p class="preco">Gratuito</p>
                 </div>
                 <div class="quadrado2">
