--- a/pagina jogo/gtav.html
+++ b/pagina jogo/gtav.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/gta5.jpg" alt="">
                 <p class="nome-preco">Grand Theft Auto V</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$240,00</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$240,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/gta5.jpg" alt="">
