--- a/pagina jogo/milesmorales.html
+++ b/pagina jogo/milesmorales.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/Miles morales.jpg" alt="">
                 <p class="nome-preco">Marvel’s Spider-Man: Miles Morales</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$199,90</p></a>
+                <a href="/Albatroz/pagamento.html"><p class="preco1">Carrinho</p> <p class="preco">R$199,90</p></a>
                 
             </div>
             <div class="descricao-jogo">
