--- a/pagina jogo/minelegends.html
+++ b/pagina jogo/minelegends.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/mine capa.jpg" alt="">
                 <p class="nome-preco">Minecraft Legends</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$199,90</p></a>
+                <a href="/Albatroz/pagamento.html"><p class="preco1">Carrinho</p> <p class="preco">R$199,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/mine deluxe.avif" alt="">
