--- a/pagina jogo/teamf.html
+++ b/pagina jogo/teamf.html
@@ -30,8 +30,8 @@
             <div class="imgs-compra">
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/teamf capa.jpg" alt="">
-                <p class="nome-preco">Team Fortress 2</p>
-                <p class="preco">Gratuito</p>
+                <p class="nome-preco">Team Fortress 2</p> <p class="preco1">Gratuito</p>
+                <p class="preco">Carrinho</p>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/valve complete pack.jpg" alt="">
