--- a/pagina jogo/village.html
+++ b/pagina jogo/village.html
@@ -35,7 +35,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/village capa.png" alt="">
                 <p class="nome-preco">Resident Evil Village</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$139,90</p></a>
+                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$139,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/Village-Gold-Edition-1.jpg" alt="">
