--- a/categoria jogo/terror.html
+++ b/categoria jogo/terror.html
@@ -11,7 +11,7 @@
     <!-- lista Ação -->
     <div class="container tab-item focus">
             <div class="name-menu">
-                <h1>Categoria Ação</h1>
+                <h1>Categoria Terror</h1>
             </div>
         <div class="container-menu">
             <div class="tab-content">
@@ -19,30 +19,30 @@
                     <!-- ação 1 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/csgo.jpg" alt="Capa do csgo">
+                            <img src="fotos/produtos/fnaf capa.jpg" alt="Capa do fnaf">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$70,00</div>
+                                <div class="block-preco-final"> R$10,90</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Counter-Strike: Global Offensive</div>
+                            <div class="tab-item-name">Five Nights at Freddy's</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
                     <!-- ação 2 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/batmanorigins.jpg" alt="Capa batimaorigins">
+                            <img src="fotos/produtos/FNAF2 capa.webp" alt="Capa fnaf 2">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$89,99</div>
+                                <div class="block-preco-final"> R$16,50</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Batman™: Arkham Origins</div>
+                            <div class="tab-item-name"> Five Nights at Freddy's 2</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -50,15 +50,15 @@
                     <!-- ação 3 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/bully capa.jpg" alt="Capa bully">
+                            <img src="fotos/produtos/fnaf3 capa.jpg" alt="Capa fnaf 3">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$39,99</div>
+                                <div class="block-preco-final"> R$16,59</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Bully: Scholarship Edition</div>
+                            <div class="tab-item-name"> Five Nights at Freddy's 3</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -66,15 +66,15 @@
                     <!-- ação 4 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/gta5.jpg" alt="Capa gta5">
+                            <img src="fotos/produtos/fnaf4 capa.jpeg" alt="Capa fnaf4">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$109,89</div>
+                                <div class="block-preco-final"> R$16,59</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Grand Theft Auto V</div>
+                            <div class="tab-item-name"> Five Nights at Freddy's 4</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -82,7 +82,7 @@
                     <!-- ação 5 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/Miles morales.jpg" alt=" capa milesmorales">
+                            <img src="fotos/produtos/fnafSL capa.jpg" alt=" capa milesmorales">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Marvel’s Spider-Man: Miles Morales</div>
+                            <div class="tab-item-name"> Five Nights at Freddy's: Sister Location</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -98,15 +98,15 @@
                     <!-- ação 6 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/mk11.jpg" alt="Capa mk11">
+                            <img src="fotos/produtos/fnafHW capa.jpg" alt="Capa mk11">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
-                                <div class="block-preco-final"> R$229,99</div>
+                                <div class="block-preco-final"> R$57,00</div>
                             </div>
                         </div>
                         <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Mortal Kombat 11</div>
+                            <div class="tab-item-name"> Five Nights at Freddy'S: Help Wanted</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -114,7 +114,39 @@
                     <!-- ação 7 -->
                     <a href="" class="tab-item">
                         <div class="img-capa">
-                            <img src="fotos/produtos/re4 capa.jpg" alt="Capa re4">
+                            <img src="fotos/produtos/fnafSB capa.jpg" alt="Capa re4">
+                        </div>
+                        <div class="block-preco block-disconto no-disconto">
+                            <div class="block-conteudo">
+                                <div class="block-preco-final"> R$70,00</div>
+                            </div>
+                        </div>
+                        <div class="tab-item-conteudo">
+                            <div class="tab-item-name"> Five Nights at Freddy's: Security Breach</div>
+                        </div>
+                        <div style="clear: both;"></div>
+                    </a>
+
+                    <!-- ação 8 -->
+                    <a href="" class="tab-item">
+                        <div class="img-capa">
+                            <img src="fotos/produtos/jason capa.jpg" alt="Capa rdr2">
+                        </div>
+                        <div class="block-preco block-disconto no-disconto">
+                            <div class="block-conteudo">
+                                <div class="block-preco-final"> R$28,90</div>
+                            </div>
+                        </div>
+                        <div class="tab-item-conteudo">
+                            <div class="tab-item-name"> Friday the 13th: The Game</div>
+                        </div>
+                        <div style="clear: both;"></div>
+                    </a>
+
+                    <!-- ação 9 -->
+                    <a href="" class="tab-item">
+                        <div class="img-capa">
+                            <img src="fotos/produtos/re4 capa.jpg" alt="Capa street6">
                         </div>
                         <div class="block-preco block-disconto no-disconto">
                             <div class="block-conteudo">
@@ -123,38 +155,6 @@
                         </div>
                         <div class="tab-item-conteudo">
                             <div class="tab-item-name"> Resident Evil 4</div>
-                        </div>
-                        <div style="clear: both;"></div>
-                    </a>
-
-                    <!-- ação 8 -->
-                    <a href="" class="tab-item">
-                        <div class="img-capa">
-                            <img src="fotos/produtos/rdr2.jpg" alt="Capa rdr2">
-                        </div>
-                        <div class="block-preco block-disconto no-disconto">
-                            <div class="block-conteudo">
-                                <div class="block-preco-final"> R$299,90</div>
-                            </div>
-                        </div>
-                        <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Red Dead Redemption 2</div>
-                        </div>
-                        <div style="clear: both;"></div>
-                    </a>
-
-                    <!-- ação 9 -->
-                    <a href="" class="tab-item">
-                        <div class="img-capa">
-                            <img src="fotos/produtos/street6 capa.jpg" alt="Capa street6">
-                        </div>
-                        <div class="block-preco block-disconto no-disconto">
-                            <div class="block-conteudo">
-                                <div class="block-preco-final"> R$249,00</div>
-                            </div>
-                        </div>
-                        <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Street Fighter™ 6</div>
                         </div>
                         <div style="clear: both;"></div>
                     </a>
@@ -175,54 +175,7 @@
                         <div style="clear: both;"></div>
                     </a>
 
-                    <!-- ação 11 -->
-                    <a href="" class="tab-item">
-                        <div class="img-capa">
-                            <img src="fotos/produtos/wo long capa2.jpg" alt=" Capa wolong">
-                        </div>
-                        <div class="block-preco block-disconto no-disconto">
-                            <div class="block-conteudo">
-                                <div class="block-preco-final"> R$299,00</div>
-                            </div>
-                        </div>
-                        <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> Wo Long: Fallen Dynasty</div>
-                        </div>
-                        <div style="clear: both;"></div>
-                    </a>
-
-                    <!-- ação 12 -->
-                    <a href="" class="tab-item">
-                        <div class="img-capa">
-                            <img src="fotos/produtos/ww.jpg" alt=" capa wow">
-                        </div>
-                        <div class="block-preco block-disconto no-disconto">
-                            <div class="block-conteudo">
-                                <div class="block-preco-final"> R$100,00</div>
-                            </div>
-                        </div>
-                        <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> world of warcraft</div>
-                        </div>
-                        <div style="clear: both;"></div>
-                    </a>
-
-                    <!-- ação 13 -->
-                    <a href="" class="tab-item">
-                        <div class="img-capa">
-                            <img src="fotos/produtos/zelda2.jpg" alt="capa zelda">
-                        </div>
-                        <div class="block-preco block-disconto no-disconto">
-                            <div class="block-conteudo">
-                                <div class="block-preco-final"> R$399,99</div>
-                            </div>
-                        </div>
-                        <div class="tab-item-conteudo">
-                            <div class="tab-item-name"> The Legend of Zelda™: Tears of the Kingdom</div>
-                        </div>
-                        <div style="clear: both;"></div>
-                    </a>
-
+                    
                     <!-- ação 14 
                     <a href="" class="tab-item">
                         <div class="img-capa">
