--- a/pagina jogo/bully.html
+++ b/pagina jogo/bully.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/bully capa.jpg" alt="">
                 <p class="nome-preco">Bully: Scholarship Edition</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$39,90</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$39,90</p></a>
             </div>
             <div class="descricao-jogo">
                 <p>Sobre este jogo:
