--- a/pagina jogo/diablo 4.html
+++ b/pagina jogo/diablo 4.html
@@ -41,7 +41,7 @@
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/diablo 4 dlc.avif" alt="">
                 <p class="nome-preco2">Diablo IV Edição Ultimate</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco2">R$499,00</p></a>
+                <a href="../pagamento.html"><p class="preco2">R$499,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
