--- a/pagina jogo/fnaf3.html
+++ b/pagina jogo/fnaf3.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnaf3 capa.jpg" alt="">
                 <p class="nome-preco">Five Nights at Freddy's 3</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$16,59</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$16,59</p></a>
                 
             </div>
             <div class="descricao-jogo">
