--- a/pagina jogo/fnafHW.html
+++ b/pagina jogo/fnafHW.html
@@ -12,7 +12,7 @@
     <main>
         <section class="conteudo-principal">
             <div class="conteudo-banner">
-                <h1 class="colum">FIVE NIGHTS AT FREDDY'S: HELP WANTED</h1>
+                <h1 class="colum">FIVE NIGHTS AT F../pagamento.html"
                 <video autoplay muted loop class="video">
                     <source src="video/fnafHW trailer.mp4" type="video/mp4">
                 </video>
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnafHW capa.jpg" alt="">
                 <p class="nome-preco">FIVE NIGHTS AT FREDDY'S: HELP WANTED</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$57,00</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p> <p class="preco">R$57,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/fnafHWBUNDLE.jpg" alt="">
                 <p class="nome-preco2">Five Nights at Freddy's: Help Wanted - Bundle</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco2">R$80,00</p></a>
+                <a href="../pagamento.html"><p class="preco2">R$80,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
