--- a/pagina jogo/street6.html
+++ b/pagina jogo/street6.html
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/street6 capa.jpg" alt="">
                 <p class="nome-preco">Street Fighter™ 6</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$249,00</p></a>
+                <a href="../pagamento.html"><p class="preco">R$249,00</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/street6ultimate.jpg" alt="">
                 <p class="nome-preco2">Street Fighter™ 6 Ultimate Edition</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco2">R$447,00</p></a>
+                <a href="../pagamento.html"><p class="preco2">R$447,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
