--- a/pagina jogo/wow.html
+++ b/pagina jogo/wow.html
@@ -34,7 +34,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/wow capa3.jpg" alt="">
                 <p class="nome-preco">world of warcraft</p> <p class='preco1'>Carrinho</p>
-                <p class="preco">Gratuito</p>
+                <a href="../pagamento.html"></a><p class="preco">Gratuito</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/wow dlc.jpg" alt="">
