--- a/pagina jogo/CSGO.html
+++ b/pagina jogo/CSGO.html
@@ -38,7 +38,7 @@
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/valve complete pack.jpg" alt="">
                 <p class="nome-preco2">Valve - Complete pack</p>
-                <a href="/Albatroz/pagamento.html"> <p class="preco2">R$188,00</p></a>
+                <a href="../pagamento.html"> <p class="preco2">R$188,00</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
