--- a/pagina jogo/fnaf.html
+++ b/pagina jogo/fnaf.html
@@ -32,7 +32,7 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/fnaf capa.jpg" alt="">
                 <p class="nome-preco">Five Nights at Freddy's</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$10,90</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$10,90</p></a>
                 
             </div>
             <div class="descricao-jogo">
