--- a/pagina jogo/reddead2.html
+++ b/pagina jogo/reddead2.html
@@ -32,12 +32,12 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/rdr2.jpg" alt="">
                 <p class="nome-preco">Red Dead Redemption 2</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$98,90</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p><p class="preco">R$98,90</p></a>
                 </div>
                 <div class="quadrado2">
                 <img class="img-ultimate" src="fotos/produtos/redead ultimate.jpg" alt="">
                 <p class="nome-preco2">Red Dead Redemption 2: Ultimate Edition</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco2">R$119,90</p></a>
+                <a href="../pagamento.html"><p class="preco2">R$119,90</p></a>
                 </div>
             </div>
             <div class="descricao-jogo">
