--- a/pagina jogo/zelda.html
+++ b/pagina jogo/zelda.html
@@ -33,8 +33,8 @@
                 <div class="quadrado">
                 <img class="img-game" src="fotos/produtos/zelda2.jpg" alt="">
                 <p class="nome-preco">The Legend of Zelda™: Tears of the Kingdom</p>
-                <a href="/Albatroz/pagamento.html"><p class='preco1'>Carrinho</p>
-                <a href="/Albatroz/pagamento.html"><p class="preco">R$357,99</p></a>
+                <a href="../pagamento.html"><p class='preco1'>Carrinho</p>
+                <a href=""><p class="preco">R$357,99</p></a>
                
             </div>
             <div class="descricao-jogo">
