--- a/categoria jogo/arcade.html
+++ b/categoria jogo/arcade.html
@@ -11,7 +11,7 @@
     <!-- lista Ação -->
     <div class="container tab-item focus">
             <div class="name-menu">
-                <h1>Categoria Ação</h1>
+                <h1>Categoria Arcade</h1>
             </div>
         <div class="container-menu">
             <div class="tab-content">
